--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^16.0.0",
+    "next": "^16.0.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "qrcode": "^1.5.4",
