--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
     "@hookform/resolvers": "^3.10.0",
-    "@napi-rs/canvas": "^0.1.82",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -39,10 +38,10 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@sparticuz/chromium": "^141.0.0",
     "@supabase/supabase-js": "^2.80.0",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
-    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -54,6 +53,8 @@
     "next": "^16.0.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
+    "puppeteer": "^24.30.0",
+    "puppeteer-core": "^24.30.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "9.8.0",
